--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "LB",
+  "author": "Luis B",
   "license": "ISC",
   "description": "",
   "dependencies": {
