--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "github": "https://github.com/luisbattle/dh-movies/blob/master/README.md",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon app.js"
   },
   "author": "Luis B",
   "license": "ISC",
